Opening nytimes.com HLS video crashes the browser - [@ libart.so@0x31b6df ]
Categories
(Firefox for Android Graveyard :: Audio/Video, defect, P3)
Tracking
(firefox64 wontfix, firefox65 wontfix, firefox66 wontfix, firefox67 verified)
People
(Reporter: csheany, Assigned: jhlin)
References
Details
(Whiteboard: [geckoview:p1])
Crash Data
Attachments
(3 files)
Updated•7 years ago
|
Comment 6•7 years ago
|
||
Comment 7•7 years ago
|
||
| Reporter | ||
Comment 10•7 years ago
|
||
| Reporter | ||
Comment 11•7 years ago
|
||
Updated•7 years ago
|
| Reporter | ||
Comment 12•7 years ago
|
||
| Reporter | ||
Comment 13•7 years ago
|
||
Comment 15•7 years ago
|
||
| Reporter | ||
Comment 16•7 years ago
|
||
| Reporter | ||
Comment 17•7 years ago
|
||
| Reporter | ||
Comment 18•7 years ago
|
||
Crash in @ java.lang.OutOfMemoryError: at com.android.okhttp.okio.Segment.<init>(Segment.java)
https://crash-stats.mozilla.org/report/index/63959b72-cbdf-41f5-9efd-0820d0190108
| Reporter | ||
Comment 19•7 years ago
|
||
Would you mind investigating this with Focus+GV?
After some time about:blank opens and I wonder if there are similiarites.
Comment 20•7 years ago
|
||
(In reply to csheany from comment #17)
With media.hls.enabled set to false the page didn't cause any issues.
Interesting! Some of your OutOfMemoryError stack traces all point to video codec code, so perhaps there is a bug in Gecko and/or the codec that causes video data to keep growing.
Can the video still play video when media.hls.enabled is set to false?
(In reply to csheany from comment #19)
Would you mind investigating this with Focus+GV?
Sorry, I don't have a Samsung Galaxy Tab A to test.
After some time about:blank opens and I wonder if there are similiarites.
Perhaps the about:blank indicates the tab (content process) crashed? There is a different bug open about about:blank opening in tabs.
| Reporter | ||
Comment 21•7 years ago
|
||
Thank you for your response.
Yes, the videos do still play. I forgot to mention that.
I didn't necessarily mean with the samme device but the app in general.
| Reporter | ||
Comment 22•7 years ago
|
||
Also, it doesn't require playing video just scroling the page or having it in the background.
Comment 23•7 years ago
|
||
Removing my NI as it is now on geckoview team's list.
Comment 25•7 years ago
|
||
Andreas what is the priority for this bug? (This should affect GV as well)
Comment 27•7 years ago
|
||
It looks like the crash happened while site was calling MediaCapabilities.decodingInfo() which would create a HLS decoder and caused the crash.
I will forward this NI to John, who know more Android video decoding than me, to see if he has any idea.
| Assignee | ||
Comment 28•7 years ago
|
||
The OutOfMemoryError cases were fixed in bug 1517252. Mark this as dup for now. If the crash still happens when playing HLS video in 66, please reopen it.
| Reporter | ||
Comment 29•7 years ago
|
||
Thank you both for your response.
It doesn't seem to crash but does give error messages.
| Reporter | ||
Comment 30•7 years ago
|
||
Comment 31•7 years ago
|
||
John, are the "This video is currently unavailable" and "Video Data Failed to Load" errors in csheany's screenshot just a side effect of Fennec gracefully handling the OOM instead of crashing (bug 1517252)? If so, why are we OOM'ing in the first place?
| Reporter | ||
Comment 32•7 years ago
|
||
After further testing, it still crashes.
| Assignee | ||
Comment 33•7 years ago
|
||
(In reply to Chris Peterson [:cpeterson] from comment #31)
John, are the "This video is currently unavailable" and "Video Data Failed to Load" errors in csheany's screenshot just a side effect of Fennec gracefully handling the OOM instead of crashing (bug 1517252)? If so, why are we OOM'ing in the first place?
Yes, I think the screenshot shows the fix in bug 1517252 is effective.
I've managed to reproduce the OOM once by letting NYT video site play video for a couple for hours. From what I observed, it looks quite similar to what James Cheng found in bug 1424168 comment 2: the NYT video page creates and loads 10 video elements and Exoplayer allocates more than 100MB in the Java heap just to buffer contents for them. Although bug 1424168 has reduced the size significantly, it is still not enough for sites that preloads many videos.
Reopen this bug and will investigate if there is other way to further reduce the memory required for this sort of sites.
| Assignee | ||
Comment 35•7 years ago
|
||
| Assignee | ||
Comment 36•7 years ago
|
||
Each instance has an instance of Java ExoPlayer that consumes memory in the
limited JVM heap. Too many concurrent players will cause OutOfMemoryError.
Depends on D20419
Comment 37•7 years ago
|
||
Comment 38•7 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/da7bf6175838
https://hg.mozilla.org/mozilla-central/rev/63b009fbe2bc
Updated•7 years ago
|
Comment 39•7 years ago
|
||
This doesn't look like a frequently occuring crash (at least not with this particular signature).
Do you think letting this go to release with 67 is OK, or do you want to try beta uplift?
Keeping in mind we only have 2 weeks of beta 66 left.
| Assignee | ||
Comment 40•7 years ago
|
||
(In reply to Liz Henry (:lizzard) (use needinfo) from comment #39)
This doesn't look like a frequently occuring crash (at least not with this particular signature).
Do you think letting this go to release with 67 is OK, or do you want to try beta uplift?
Keeping in mind we only have 2 weeks of beta 66 left.
I prefer not to uplift to beta.
Updated•7 years ago
|
| Reporter | ||
Comment 41•7 years ago
|
||
I think the first crash is irrelevant at this point hence all the others.
The time depends on the amount of other tabs open.
In the middle of writing/ testing the browser crashed and didn't trip the reporter.
I have a feeling Bug 1508641 may be of further assistance.
| Reporter | ||
Comment 42•7 years ago
|
||
It's still not a great experience.
There are a lot of empty elements.
More videos can be loaded than the minimum and I'm not sure it adapts.
The progress bar takes a while to complete. The page just feels heavy.
FWIW, Focus with WebView doesn't seem to have any issues.
| Reporter | ||
Comment 44•7 years ago
|
||
If it helps, based on Comment 28 and Comment 33...
I have been testing further with Reference Browser 1.0.1910 (Build #1063145 Gecko 67.0a1-20190227104426) to see which Crash Signatures it triggers.
| Reporter | ||
Comment 45•7 years ago
|
||
... how it performs and
Comment 46•6 years ago
|
||
I am not assigned to this bug and I don't think I can help. If this needs anymore attention you can needinfo the assignee.
| Reporter | ||
Comment 47•6 years ago
|
||
Thank you for your response.
The reason I brought this to your attention was to provide a use case for Bug 1508641 which I noticed has not been fixed yet.
Comment 48•6 years ago
|
||
If there is anything in that bug that needs clarification you can needinfo me there. It seems to not be frequent anymore, and the cases where it still happens are not accessibility related.
| Reporter | ||
Comment 49•6 years ago
|
||
Marcia, does this site give you any problems?
Comment 51•6 years ago
|
||
(In reply to csheany from comment #49)
Marcia, does this site give you any problems?
I will test over the weekend on all my devices. A cursory test on Pixel 3 running Android Pie showed no issues playing videos on that site.
Comment 52•6 years ago
|
||
(In reply to csheany from comment #50)
Have you had any issues?
Tested on the latest Nightly build following your steps and the browser did not crash. The videos played with no interruptions and no error was displayed.
Device: Nexus 9(Android 7.1.1).
Note that we don't have the Samsung Galaxy Tab A 8.0 (2015) SM-T350 device.
| Reporter | ||
Comment 53•6 years ago
|
||
Thank you for your response.
Would you mind testing Nightly with other devices as well as Release?
Also, how much time did you allow for and how many tabs did you have open?
Were videos loaded after scrolling?
Comment 54•6 years ago
|
||
Tested on 67.0b3 with the following devices:
- Xiaomi Mi4i(Android 5.0.2)
- Samsung Galaxy Tab S3 (Android 8.0)
- Google Pixel (Android 9)
- Samsung Galaxy Note 8 (Android 9.0)
Didn't encounter any issues, the video played without interruptions. I had more than 7 tabs opened and also just one, watched 4-5 videos in fullscreen mode without interacting with the screen and also played them individually. In all cases, no issues were displayed.
If you have other issues, and no crash displayed, please make a video to understand the problem. Thanks!
Comment 55•6 years ago
•
|
||
Based on my last comment I will update the flag to VERIFIED.
| Reporter | ||
Comment 56•6 years ago
|
||
The problem isn't necessarily playing video but keeping the browser open.
It still crashes but not sure why.
Comment 57•6 years ago
|
||
(In reply to csheany from comment #56)
The problem isn't necessarily playing video but keeping the browser open.
It still crashes but not sure why.
The bug was filed for the crashes and this issue is fixed, if you find another problem, file a new bug. I asked in comment 54 to make a video with the new issue but with no answer.
| Reporter | ||
Comment 58•6 years ago
|
||
The issue is still the same. It might be fixed for some but not all.
Even without these patches other devices might not have a problem in Release.
The only thing a video would display is the browser crashing.
Without a report attached that is not very actionable (Bug 1522107)
Given the different signatures it would have been ideal for this to be a meta and spread out but that is neither here nor there.
I'm still trying to understand the approach (Bug 1517785)
There are a few others (Bug 1517985 - Bug 1512147 - Bug 1544888)
Updated•5 years ago
|
Updated•5 years ago
|
Description
•